--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { target: "x86_64-unknown-linux-gnu", os: "ubuntu-latest", arch: "amd64", extension: "" }
-          # TODO: the cross-compile to Linux aarch64 fails with a pkg-config error that
-          # I don't yet know how to resolve
-          # - { target: "aarch64-unknown-linux-gnu", os: "ubuntu-latest", arch: "aarch64", extension: "" }
-          - { target: "x86_64-apple-darwin", os: "macos-latest", arch: "amd64", extension: "" }
-          - { target: "aarch64-apple-darwin", os: "macos-latest", arch: "aarch64", extension: "" }
+          # - { target: "x86_64-unknown-linux-gnu", os: "ubuntu-latest", arch: "amd64", extension: "" }
+          # # TODO: the cross-compile to Linux aarch64 fails with a pkg-config error that
+          # # I don't yet know how to resolve
+          # # - { target: "aarch64-unknown-linux-gnu", os: "ubuntu-latest", arch: "aarch64", extension: "" }
+          # - { target: "x86_64-apple-darwin", os: "macos-latest", arch: "amd64", extension: "" }
+          # - { target: "aarch64-apple-darwin", os: "macos-latest", arch: "aarch64", extension: "" }
           - { target: "x86_64-pc-windows-msvc", os: "windows-latest", arch: "amd64", extension: ".exe" }
     steps:
       - uses: actions/checkout@v3
@@ -59,6 +59,8 @@ jobs:
 
       - name: Pluginify plugin binary
         run: spin pluginify --arch ${{ matrix.config.arch }}
+      - name: Show files after pluginification
+        run: ls -R
       - name: Archive pluginified
         uses: actions/upload-artifact@v3
         with:
