--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,18 @@ name = "trigger-sqs"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "trigger-sqs"
+path = "src/main.rs"
+
+[[bin]]
+name = "trigger-sqs-eventer"
+path = "src/eventer.rs"
+
+[[bin]]
+name = "trigger-sqs-executor"
+path = "src/executor.rs"
+
 [dependencies]
 anyhow = "1.0.68"
 async-trait = "0.1"
@@ -10,13 +22,18 @@ aws-config = "0.52.0"
 aws-sdk-sqs = "0.22.0"
 clap = { version = "3.1.15", features = ["derive", "env"] }
 futures = "0.3.25"
+prost = "0.11"
 serde = "1.0"
 spin-core = { git = "https://github.com/fermyon/spin", tag = "v0.9.0" }
 spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v0.9.0" }
 tokio = { version = "1.11", features = [ "full" ] }
 tokio-scoped = "0.2.0"
+tonic = "0.8.3"
 
 [dependencies.wit-bindgen-wasmtime]
 git = "https://github.com/fermyon/wit-bindgen-backport"
 rev = "b97517c7bfcc82f3cd6e730270d40cd4781aa789"
 features = ["async"]
+
+[build-dependencies]
+tonic-build = "0.8.4"
