--- a/guest/spin.toml
+++ b/guest/spin.toml
@@ -12,5 +12,7 @@ source = "target/wasm32-wasi/release/guest.wasm"
 queue_url = "https://sqs.us-west-2.amazonaws.com/177456779558/itowlsontest"
 max_messages = 1
 idle_wait_seconds = 8
+system_attributes = ["All"]
+message_attributes = ["glonk"]
 [component.build]
 command = "cargo build --target wasm32-wasi --release"
