--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,20 @@ path = "src/executor.rs"
 
 [dependencies]
 anyhow = "1.0.68"
+async-stream = "0.3.4"
 async-trait = "0.1"
 aws-config = "0.52.0"
 aws-sdk-sqs = "0.22.0"
 clap = { version = "3.1.15", features = ["derive", "env"] }
 futures = "0.3.25"
+h2 = "0.3.15"
 prost = "0.11"
 serde = "1.0"
 spin-core = { git = "https://github.com/fermyon/spin", tag = "v0.9.0" }
 spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v0.9.0" }
 tokio = { version = "1.11", features = [ "full" ] }
 tokio-scoped = "0.2.0"
+tokio-stream = "0.1.12"
 tonic = "0.8.3"
 
 [dependencies.wit-bindgen-wasmtime]
